# atlas-macro-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml
assets/: tailwind.config.js  timsun_public_ai_contract.json  timsun_public_ai_contract_report.md
atlasmacro/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
nginx/: default.conf
research/: admin.py  ai_glossary_catalog.py  ai_reference_catalog.py  ai_supply_chain_catalog.py  apps.py  berkshire_letters.py  calculations.py  consumer_contract.py  consumer_credit.py  context_processors.py  credit_contract.py  credit_official.py  data_catalog.py  economy_contract.py  employment_contract.py  fed_h10.py  fed_h41.py  fed_h8.py  fed_prates.py  github_catalog.py  inflation_contract.py  labor_official.py  macro_contract.py  macro_official.py  macro_releases.py  models.py  official_data.py  official_news.py  page_registry.py  providers.py  public_ai_contract.py  raw_evidence.py  sec_company_facts.py  services.py  tasks.py  thesis_publication.py  urls.py  views.py  volatility_contract.py
tests/: conftest.py  test_ai_company_contract.py  test_ai_glossary_contract.py  test_ai_reference_catalog.py  test_ai_supply_chain_catalog.py  test_assets_fx.py  test_berkshire_letters.py  test_calculations.py  test_cftc.py  test_consumer_credit.py  test_consumer_official.py  test_content_ingestion.py  test_credit_contract.py  test_credit_official.py  test_discovery_and_pwa.py  test_economy_overview.py  (+39 more)
(+99 files in other folders)
